--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,20 +1,20 @@
 @font-face {
     font-family: lato-thin;
-    src: url(../../fonts/Lato-Thin.ttf);
+    src: url(../fonts/Lato-Thin.ttf);
 }
 @font-face {
     font-family: lato-light;
-    src: url(../../fonts/Lato-Light.ttf);
+    src: url(../fonts/Lato-Light.ttf);
 }
 @font-face {
     font-family: lato;
-    src: url(../../fonts/Lato-Regular.ttf);
+    src: url(../fonts/Lato-Regular.ttf);
 }
 @font-face {
     font-family: lato-bold;
-    src: url(../../fonts/Lato-Bold.ttf);
+    src: url(../fonts/Lato-Bold.ttf);
 }
 @font-face {
     font-family: lato-black;
-    src: url(../../fonts/Lato-Black.ttf);
+    src: url(../fonts/Lato-Black.ttf);
 }
