--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,10 +9,13 @@
 @import 'basics/base';
 @import 'basics/layout';
 
-// COMPONENTS
-
-
-
-
 // PAGES
+
+
+
+// COMPONENTS
+@import 'cmps/item-list'
+
+
+
 
