--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,6 +1,8 @@
 .main-layout {
+	padding-top: $top-padding;
+
 	display: grid;
-	grid-template-columns: $layoutPadding 1fr $layoutPadding;
+	grid-template-columns: $layout-padding 1fr $layout-padding;
 
 	> *.full {
 		grid-column: 1 / -1;
@@ -19,6 +21,6 @@
 	}
 
 	@include for-wide-layout {
-		@include layoutGTC($break-wide);
+		@include layoutGTC($max-layout-width);
 	}
 }
