--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,21 +1,17 @@
 // SETUP
-@import 'setup/typography';
-@import 'setup/variables';
-@import 'setup/mixins';
-@import 'setup/functions';
+@import "setup/typography";
+@import "setup/variables";
+@import "setup/mixins";
+@import "setup/functions";
 
 // BASICS
-@import 'basics/helpers';
-@import 'basics/base';
-@import 'basics/layout';
+@import "basics/helpers";
+@import "basics/base";
+@import "basics/layout";
 
 // PAGES
 
-
-
 // COMPONENTS
-@import 'cmps/item-list'
-
-
-
-
+@import "cmps/app-header";
+@import "cmps/item-list";
+@import "cmps/item-preview";
