Imporved UI(scss) + UX-infinity scroll, scrollToTop via custom hooks)

--- a/src/assets/styles/basics/_layout.scss
+++ b/src/assets/styles/basics/_layout.scss
@@ -1,5 +1,6 @@
 .main-layout {
 	padding-top: $top-padding;
+	padding-bottom: $bottom-padding;
 
 	display: grid;
 	grid-template-columns: $layout-padding 1fr $layout-padding;
