--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -8,10 +8,17 @@
 @import "basics/helpers";
 @import "basics/base";
 @import "basics/layout";
+@import "basics/animations";
 
 // PAGES
 
+@import "pages/item-details";
+
 // COMPONENTS
 @import "cmps/app-header";
+
 @import "cmps/item-list";
 @import "cmps/item-preview";
+
+@import "cmps/image";
+@import "cmps/skeleton";
