--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -12,6 +12,7 @@ $bg-transition: linear-gradient(#eff3fb, #eff3fb 56%, #fff), linear-gradient(254
 
 // LAYOUT
 $top-padding: 90px;
+$bottom-padding: 45px;
 $layout-padding: 40px;
 $max-layout-width: 1600px;
 
