--- a/src/assets/styles/cmps/_item-preview.scss
+++ b/src/assets/styles/cmps/_item-preview.scss
@@ -1,41 +1,70 @@
 .item-preview {
-	&.active {
-		border: 1px solid red;
+	background: $clr-white;
+	border-radius: 0.5rem;
+	box-shadow: 0 0px 8px rgba(0, 0, 0, 0.058);
+	transition: 0.25s;
+
+	.item-preview-content {
+		padding: 0.5rem 1rem 1rem;
+
+		h2 {
+			transition: 0.25s;
+			font-size: rem(25px);
+			padding-bottom: 0.4rem;
+			margin-bottom: 0.4rem;
+			border-bottom: 1px solid $bg-primary;
+			@include fontType(bold);
+		}
+
+		p {
+			font-size: rem(15px);
+			color: $text-secondary;
+			margin-top: 0.5rem;
+			display: -webkit-box;
+			-webkit-box-orient: vertical;
+			-webkit-line-clamp: 2;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			height: 3em;
+			line-height: 1.5em;
+		}
 	}
 
 	.img-container {
-		border-radius: 0.5rem;
-		overflow: hidden;
-		
-		position: relative;
-
-		max-width: 100%;
-
-
 		@include aspect-ratio(1, 1);
 
-		.skeleton-container {
-			position: absolute;
-			inset: 0;
-		}
+		border-top-left-radius: 0.5rem;
+		border-top-right-radius: 0.5rem;
 
 		img {
+			transition: 0.35s;
 		}
 	}
-}
 
-.skeleton-custom {
-	background-color: #f0f0f0;
-	background-image: linear-gradient(90deg, #f0f0f0, #e0e0e0, #f0f0f0);
-	background-size: 200% 100%;
-	animation: shimmer 2.5s infinite linear;
-}
+	&.active {
+		border: 2px solid $clr-brand;
+		box-shadow: 0 0px 8px rgba(0, 0, 0, 0.553);
+		background-color: $bg-secondary;
 
-@keyframes shimmer {
-	0% {
-		background-position: -200% 0;
+		.item-preview-content {
+			h2,
+			p {
+				color: $clr-white;
+			}
+		}
 	}
-	100% {
-		background-position: 200% 0;
+
+	&:not(.active):hover {
+		box-shadow: 0 0px 8px rgba(0, 0, 0, 0.185);
+
+		.item-preview-content {
+			h2 {
+				color: $clr-brand;
+				border-bottom: 1px solid $clr-brand;
+			}
+		}
+		img {
+			transform: scale(1.1);
+		}
 	}
 }
